# sigsum

./: .gitignore  .npmignore  Cargo.toml  README.md  biome.json  native.d.cts  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
__test__/: sighash.test.ts  sigsum.test.ts
__test__/bench/: hash.bench.ts
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-x64-msvc/: package.json
src/: common.rs  lib.rs
src/blake3/: buffer.rs  file.rs  stream.rs
src/xxh3/: buffer.rs  file.rs  mod.rs  stream.rs
ts/: errors.ts  index.ts  sighash.ts  sigsum.ts  types.ts
ts/algo/: blake3.ts  index.ts  xxh3.ts
